# gMRI2FEM

./: .gitignore  README.md  Snakefile  environment.yml  pyproject.toml  sagamake.sh  singularity.def  snakeconfig.yaml
.github/workflows/: conda-publish.yml
cluster_setup/: saga_mamba.sh
conda-recipe/: meta.yaml
docs/: _config.yml  _toc.yml  cluster-containers.md  intro.md  tsd-colossus.md
gmri2fem/: filters.py  settings.py  utils.py
gmri2fem/analysis/: create_dataframe.py  region_quantities.py  segmentation_refinement.py
gmri2fem/dicom/: create_metadata.py  extract_mixed_sequence.py  process_dicom.py
gmri2fem/dti/: check_dti.py  clean_dti_data.py  dti_data_to_mesh.py
gmri2fem/models/: data_interpolator.py  diffusion_model.py  multidiffusion_model.py  solvers.py
gmri2fem/mriprocessing/: estimate_concentration.py  estimate_t1maps.py  (+18 more)
resources/: slice-differences.pvsm  two-comp_fluid_concentrations.pvsm  two-comp_fluid_concentrations_difference.pvsm
sandbox/: analytical.py  bdry-test.py  ode-2-comp.py  one-comp.py  two-comp.py
sbatches/: sagamake.sh
scripts/: T1_to_R1.py  create_freesurfer_lut.py  diffusion_w_dti.py  extract-ventricles.sh  fem_solute_quantification.py  hdf2xdmf.py  interpolation-errors.py  mesh_information.py  mri_recon.py  t1map_estimate.py  view_concentrations.py
singularity/: fs-greedy.def  gmri2fem.def
snakemake/: snakefile-modeling
src/: _cli.py
tests/: test_interpolator.py
workflows_additional/: T1maps  T1w_signal_intensities  concentration-estimate  dti  mesh-generation  mri2fem  recon-all  register  statistics
(+60 files in other folders)
