[project]
name = "gmri2fem"
authors = [
    {name = "Jørgen Riseth", email = "jnriseth@gmail.com"},
]
version = "0.0.1"
requires-python = ">=3.9,<3.13"
description = "Processing pipeline for glymphatic MRI."
readme = "README.md"
license = {file = "LICENSE"} 
dependencies = [
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "meshio>=5.3.5",
    "nibabel>=5.3.2",
    "numpy<2.1",
    "pint>=0.24.3",
    "pydicom>=2.4.4",
    "pymeshfix>=0.17.0",
    "pyvista>=0.44.1",
    "scikit-image>=0.24.0",
    "scipy>=1.13.1",
    "tqdm>=4.66.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[tool.pixi.project]
channels = ["conda-forge", "bioconda", "jorgenriseth"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
gmri2fem = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
fenics = ">=2019.1.0,<2020"
snakemake = ">=8.25.1,<9"
svmtk = ">=1.3.0,<2"
dcm2niix = ">=1.0.20240202,<2"
pantarei = ">=0.3.0,<0.4"
